--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@ h1{
 .orange{
     color: orange;
 }
-button{
+.link-button{
+    text-decoration: none;
     color: white;
-    background-color: orange;
-    border: 1px solid orange;
-    padding: 5px 20px;
+    font-weight: 700;
+    background-image: radial-gradient(orangered, orange);
+    padding: 10px 30px;
     border-radius: 5px;
 }
 section{
@@ -22,6 +23,6 @@ section{
     padding-left: 40px;
 }
 .half-width img{
-    width: 100%;
+    width: 10%;
     
 }
