--- a/style.css
+++ b/style.css
@@ -24,13 +24,17 @@ h1{
 
 .half-width{
     width: 50%;
-    padding-left: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .half-width img{
-    width: 100%;
+    width: 80%;
     
 }
 .dream-big{
     display: flex;
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position-x: right;
 }
     
