--- a/style.css
+++ b/style.css
@@ -41,7 +41,36 @@ h1{
 .end-part{
     display: flex;
 }
-
+.experiences{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.ful-stack{
+    width: 50%;
+    border-radius: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-right: 20px;
+    padding-left: 20px;
+    box-shadow: 20px 20px 50px grey;
+    border-left: 5px solid;
+    border-image: linear-gradient(10deg, red , yellow);
+    border-image-slice: 1;
+}    
+.junior{
+    width: 50%;
+    border-radius: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-right: 20px;
+    padding-left: 20px;
+    box-shadow: 20px 20px 50px grey;
+    border-left: 5px solid;
+    border-image: linear-gradient( blue , rgb(81, 81, 145));
+    border-image-slice: 1;
+    
+}
 h3{
     color: orange;
 }
